--- a/style.css
+++ b/style.css
@@ -3,93 +3,49 @@
     padding: 0;
 }
 
-#page3 {
-    min-height: 100vh;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    padding: 3vw;
-    flex-direction: column;
-    background: #000;
-
+@font-face {
+    font-family: oswald;
+    src: url(/Font/oswald-latin.ttf);
+}
+@font-face {
+    font-family: montserrat_thin;
+    src: url(/Font/montserrat-latin.ttf);
 }
 
-#page3-top {
-    text-align: center;
+
+:root {
+    --blue: #1e90ff;
+    --white: #ffffff;
+    --Black: #000000;
+  }
+
+.primaryFont{
+    font-family:montserrat_thin ;
+}
+.secondaryFont{
+    font-family:montserrat_thin ;
 }
 
-#page3-top h4 {
-    margin-bottom: 1vw;
-    font-size: 1vw;
-    font-weight: 500;
-}
 
-#page3-top h4 samp {
-    font-size: 0.7vw;
-    background-color: #000;
-    color: #fff;
-    padding: 2px 5px;
-    border-radius: 5px;
-}
 
-#page3-top h2 {
-    font-size: 4vw;
-    font-weight: 100;
-    font-family: nb;
-    color: #fff;
 
-}
 
-#page3-ele {
-    height: 70vh;
-    width: 100%;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 8vw;
 
-}
-
-#page3-ele .box {
-    height: 100%;
-    width: 33%;
-    /* background-color: aqua;  */
-    position: relative;
-}
-
-#page3-ele .box video {
-
-    object-fit: cover;
-    object-position: center;
-    height: 100%;
-    width: 100%;
-}
-
-#page3-ele .box img {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    object-position: center;
-    transition: all ease 1s;
-}
-
-#page3-ele .box:hover img {
+.page3-ele .box:hover img {
     opacity: 0;
 }
 
 
 .text-stroke {
-    -webkit-text-stroke: 1px #ffffff;
+    -webkit-text-stroke:2px   var(--white); 
+   
 }
 
-
+/* start */
+/* hero section marquee animation */
 .elem h1 {
     animation-name: marquee-anime;
-    animation-duration: 5s;
+    animation-duration: 8s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
     margin-right: 20px;
@@ -106,4 +62,9 @@
         transform: translateX(calc(-100% - 20px));
 
     }
+
 }
+/* hero section marquee animation */
+/* end */
+
+
